# atarist-sopwith

./: .gitignore  AUTHORS  FAQ.md  Makefile  Makefile.am  Makefile.atari  NEWS.md  PHILOSOPHY.md  README.md  autogen.sh  configure.ac  embuild.sh  swstbar.s
.github/ISSUE_TEMPLATE/: feature_request.yml  issue.yml
.github/workflows/: build.yml  emscripten.yml
doc/: INSTALL  sopwith-mission.5  sopwith.6  sopwith.cfg.5
maps/: doghouse.sop  empty.sop  new_targets.sop  original.sop  tank_strike.sop  terrain.py
pkg/: Makefile.am
pkg/emscripten/: GNUmakefile  manifest.json  sopwith.html
pkg/macos/: dmgfix
src/: Makefile.am  font.h  hiscore.c  hiscore.h  hiscores.txt  io.github.fragglet.sdl_sopwith.metainfo.xml  std.h  sw.h  swasynio.c  swasynio.h  swauto.c  swcollsn.c  swcollsn.h  swconf.c  swconf.h  swend.c  swend.h  swgames.c  swgrpha.c  swgrpha.h  swinit.c  swinit.h  swmain.c  swmain.h  swmenu.c  swmenu.h  swmove.c  swmove.h  swobject.c  swobject.h  swsound.c  swsound.h  swsplat.c  swstbar.c  swstbar.h  swsymbol.c  swsymbol.h  swtext.c  swtext.h  swtitle.c  (+7 more)
src/atari/: atari_keys.h  controller.c  inttypes.h  main.c  pcsound.c  tcpcomm_stub.c  timer.c  video.c
src/sdl/: Makefile.am  controller.c  pcsound.c  video.c
